Various fixes. Cleaned up localisation service.

--- a/src/services/locale/en.json
+++ b/src/services/locale/en.json
@@ -1,5 +1,6 @@
 {
-  "header": {
-    "title": "Welcome"
+  "cover": {
+    "title": "Joséphine & Morten",
+    "description": "Getting Married March 21, 2020 — Amsterdam, Holland"
   }
 }
