Switch font type. Add DOM structure to couple info.

--- a/src/services/locale/en.json
+++ b/src/services/locale/en.json
@@ -1,7 +1,12 @@
 {
   "cover": {
     "title": "Joséphine & Morten",
-    "description": "Getting Married March 21, 2020 — Amsterdam, Holland"
+    "description": "21. February 2020"
+  },
+
+  "couple-intro": {
+    "title": "Are getting married",
+    "description": "on February 21st, 2020 — Amsterdam, Holland"
   },
 
   "countdown": {
